--- a/components/Task/styles.module.css
+++ b/components/Task/styles.module.css
@@ -1,5 +1,35 @@
 .taskCard {
-    border: 1px solid #DBDBDB;
+    display: flex;
+    align-items: center;
+    border: 1px solid #dbdbdb;
     border-radius: 16px;
-    padding: 0px 16px 0px 16px;
-}
+    padding: 8px 16px;
+    cursor: pointer;
+    margin-bottom: 8px;
+  }
+  
+  .button {
+    width: 20px;
+    height: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+    background-color: transparent;
+    
+  }
+  
+  
+  
+  .checkmark {
+    color: #28a745; 
+    font-size: 16px; 
+  }
+  
+  .text {
+    font-size: 16px;
+    
+  }
+  
