--- a/components/Heading.module.css
+++ b/components/Heading.module.css
@@ -1,6 +1,6 @@
 .h1 {
     color: aqua;
-    font-size: xx-large;
+    font-size: 30px;
     background-color: black;
     margin: 10px;
     height: 100%;
