--- a/components/Task/styles.module.css
+++ b/components/Task/styles.module.css
@@ -20,9 +20,19 @@
   background-color: transparent;
 }
 
-.checkmark {
-  color: #28a745;
+.completed {
+  background-color: green;
+  border-color: green;
+}
+
+.checkbox {
+  color: white;
   font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .text {
