--- a/components/Task/styles.module.css
+++ b/components/Task/styles.module.css
@@ -6,6 +6,29 @@
   padding: 8px 16px;
   cursor: pointer;
   margin-bottom: 8px;
+  font-family: "Sometype Mono", monospace;
+  position: relative;
+}
+
+.dragHandle {
+  width: 20px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: grab;
+  margin-right: 10px;
+}
+
+.dots {
+  font-size: 18px;
+  color: #888;
+}
+
+.text {
+  font-size: 16px;
+  font-family: "Sometype Mono", monospace;
+  flex-grow: 1;
 }
 
 .button {
@@ -33,10 +56,6 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-}
-
-.text {
-  font-size: 16px;
 }
 
 .dragging {
