--- a/styles.module.css
+++ b/styles.module.css
@@ -3,4 +3,12 @@
   text-align: center;
   font-family: "Sometype Mono", monospace;
   position: relative;
+  
+}
+.taskListContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px; 
 }
