--- a/styles.module.css
+++ b/styles.module.css
@@ -5,7 +5,7 @@
   position: relative;
   
 }
-.taskListContainer {
+.pageContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
