--- a/styles.module.css
+++ b/styles.module.css
@@ -3,12 +3,36 @@
   text-align: center;
   font-family: "Sometype Mono", monospace;
   position: relative;
-  
 }
 .pageContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 20px; 
+  padding: 0 20px;
 }
+.input {
+  padding: 20px 20px;
+  border: 2px solid black;
+  border-radius: 12px;
+  font-size: 20px;
+  margin-right: 12px;
+  flex-grow: 1;
+  width: 100%;
+  max-width: 200px;
+  font-family: "Sometype Mono", monospace;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.addButton {
+  padding: 12px 16px;
+  border: 2px solid black;
+  background-color: #4caf50;
+  color: white;
+  border-radius: 12px;
+  cursor: pointer;
+  font-size: 18px;
+  font-family: "Sometype Mono", monospace;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
