--- a/components/TaskInput/styles.module.css
+++ b/components/TaskInput/styles.module.css
@@ -1,26 +1,27 @@
+.inputContainer {
+  display: flex;
+  gap: 12px;
+  width: 400px;
+}
 .input {
-    padding: 15px 20px;
-    border: 2px solid black;
-    border-radius: 12px;
-    font-size: 20px;
-    margin-right: 12px;
-    flex-grow: 1;
-    width: 100%;
-    max-width: 200px;
-    font-family: "Sometype Mono", monospace;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  .addButton {
-    padding: 12px 16px;
-    border: 2px solid black;
-    background-color: #4caf50;
-    color: white;
-    border-radius: 12px;
-    cursor: pointer;
-    font-size: 18px;
-    font-family: "Sometype Mono", monospace;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  
+  border: 1px solid #dbdbdb;
+  font-size: 16px;
+  border-radius: 16px;
+  padding: 8px 16px;
+  flex-grow: 1;
+  width: 100%;
+  max-width: 400px;
+  height: 50px;
+  box-sizing: border-box;
+}
+
+.addButton {
+  padding: 8px 16px;
+  background-color: #4caf50;
+  color: white;
+  border-radius: 16px;
+  cursor: pointer;
+  font-size: 16px;
+  white-space: nowrap;
+  border: none;
+}
