--- a/components/TaskInput/styles.module.css
+++ b/components/TaskInput/styles.module.css
@@ -1,16 +1,18 @@
 .inputContainer {
   display: flex;
-  gap: 12px;
-  width: 400px;
+  flex-direction: column;
+  align-items: center;
 }
+
+.image {
+  width: 200px;
+  height: auto;
+  margin-bottom: 15px;
+}
+
 .input {
-  border: 1px solid #dbdbdb;
-  font-size: 16px;
-  border-radius: 16px;
-  padding: 8px 16px;
-  flex-grow: 1;
-  width: 100%;
-  max-width: 400px;
-  height: 50px;
-  box-sizing: border-box;
+  width: 350px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
 }
