--- a/components/TaskInput/styles.module.css
+++ b/components/TaskInput/styles.module.css
@@ -1,13 +1,7 @@
-.inputContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .image {
-  width: 200px;
   height: auto;
   margin-bottom: 15px;
+  padding: 20px;
 }
 
 .input {
