--- a/components/Task/styles.module.css
+++ b/components/Task/styles.module.css
@@ -11,17 +11,20 @@
   max-width: 400px;
   height: 50px;
   box-sizing: border-box;
-  background-color: white; 
+  background-color: white;
 }
 
 .dragHandle {
+  position: absolute; 
+  right: 10px; 
+  top: 50%; 
+  transform: translateY(-50%); 
   width: 20px;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: grab;
-  margin-right: 10px;
 }
 
 .dots {
@@ -72,4 +75,3 @@
 .dragging {
   opacity: 0.5;
 }
-
