--- a/components/TaskInput/styles.module.css
+++ b/components/TaskInput/styles.module.css
@@ -5,8 +5,14 @@
 }
 
 .input {
-  width: 350px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: var(--border-radius)
+  width: 100%; 
+  max-width: 400px;
+  padding: 8px 16px; 
+  border: 1px solid #dbdbdb; 
+  border-radius: 16px; 
+  font-size: 16px;
+  height: 50px; 
+  box-sizing: border-box; 
+  background-color: white; 
+  margin-bottom: 8px; 
 }
